# tflow

./: README.md  README_zh.md  pyproject.toml
doc/: agent-team-e2e-design-v1.md  agent-team-e2e-design-v2.md  agent-team-e2e-design-v3.md  agent-team-e2e-design-v4.md
openspec/changes/tflow-cli-design/: design.md  proposal.md  tasks.md
openspec/changes/tflow-cli-design/specs/analysis-caching/: spec.md
openspec/changes/tflow-cli-design/specs/dev-server-lifecycle/: spec.md
openspec/changes/tflow-cli-design/specs/external-tool-registration/: spec.md
openspec/changes/tflow-cli-design/specs/headed-browser-mode/: spec.md
openspec/changes/tflow-cli-design/specs/playwright-code-generation/: spec.md
openspec/changes/tflow-cli-design/specs/project-analysis/: spec.md
openspec/changes/tflow-cli-design/specs/test-case-management/: spec.md
openspec/changes/tflow-cli-design/specs/test-plan-generation/: spec.md
openspec/changes/tflow-cli-design/specs/test-verification/: spec.md
openspec/changes/tflow-cli-design/specs/tool-bridge-execution/: spec.md
src/tflow/: __init__.py  agent.py  analyzer.py  cli.py  config.py  core.py  db.py  generator.py  planner.py  reporter.py  runner.py  server.py  tool_bridge.py
