[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tflow"
version = "0.1.0"
description = "AI-Powered E2E Test Generation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0"
]

[project.scripts]
tflow = "tflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tflow"]
